# invenio-records

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  bundles.py  pyproject.toml  pytest.ini  requirements-devel.txt  requirements-docs.txt  requirements.py  run-tests.sh  setup.cfg  setup.py  test.db  tox.ini
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  concurrency.rst  conf.py  contributing.rst  encoding.rst  examplesapp.rst  index.rst  installation.rst  requirements.txt  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py
invenio_records/: __init__.py  access.py  admin.py  api.py  bundles.py  cli.py  config.py  dictutils.py  errors.py  ext.py  extensions.py  manage.py  models.py  permissions.py  receivers.py  registry.py  resolver.py  signals.py  utils.py  validators.py  version.py  views.py
invenio_records/alembic/: 07fb52561c5c_alter_column_from_json_to_jsonb.py  1095cdf9f350_create_records_branch.py  428b919be0ea_alter_column_from_json_to_jsonb_for_version.py  66db9c49c699_change_datetime_types.py  862037093962_create_records_tables.py
invenio_records/data/marc21/: authority.xml  bibliographic.xml
invenio_records/documentext/models/: record_document_base.cfg
invenio_records/dumpers/: __init__.py  base.py  elasticsearch.py  indexedat.py  relations.py  search.py
invenio_records/jsonref_test/: README  main.py
invenio_records/jsonref_test/cds_loader/: __init__.py  base.py  resolvers.py
invenio_records/jsonref_test/sample_data/: 1800700.json  1800701.json  1800702.json  1800703.json  1800704.json  1800705.json  1800708.json  1800715.json  762638.json
invenio_records/providers/: __init__.py  recid.py
invenio_records/recordext/functions/: get_pubinfo_standard_form.py  get_record_collections.py  reserve_recid.py
invenio_records/recordext/models/: record_base.cfg
invenio_records/systemfields/: __init__.py  base.py  constant.py  dict.py  model.py  relatedmodelfield.py  relations.py
invenio_records/systemfields/relations/: __init__.py  errors.py  field.py  mapping.py  modelrelations.py  relations.py  results.py
invenio_records/tasks/: __init__.py  api.py  datacite.py  index.py
invenio_records/templates/records/: base_base.html  comments_base.html  files_base.html  metadata_base.html
invenio_records/translations/: invenio.pot  messages.pot
invenio_records/translations/af/LC_MESSAGES/: messages.po
invenio_records/translations/ar/LC_MESSAGES/: messages.po
invenio_records/upgrades/: __init__.py  records_2014_04_14_json_type_fix.py  records_2014_08_22_create_record_json.py
misc/: header.rst
tests/: conftest.py  models.py  test_admin.py  test_alembic.py  test_api.py  test_api_dumpers.py  test_custom_db.py  test_dictutils.py  test_encoder.py  test_example_app.py  test_field_model.py  test_invenio_records.py  test_permissions.py  test_processors.py  test_record.py  test_relations_field.py  test_relations_modelfield.py  test_relations_systemfield.py  test_resolver.py  test_signals.py  test_systemfields.py  test_systemfields_relatedmodelfield.py  test_tasks.py  test_tasks_datacite.py
tests/demo/: __init__.py  json_resolver.py
(+33 files in other folders)
