# SPDX-FileCopyrightText: 2015-2022 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-records"
description = "Invenio-Records is a metadata storage module."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "invenio",
  "metadata",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "arrow>=0.16.0",
  "invenio-celery>=2.0.0,<3.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "jsonpatch>=1.26",
  "jsonref>=0.2",
  "jsonresolver>=0.5.0",
  "jsonschema>=4.3.0,<5.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-records"

[project.entry-points."invenio_admin.views"]
invenio_records = "invenio_records.admin:record_adminview"

[project.entry-points."invenio_base.api_apps"]
invenio_records = "invenio_records:InvenioRecords"

[project.entry-points."invenio_base.apps"]
invenio_records = "invenio_records:InvenioRecords"

[project.entry-points."invenio_celery.tasks"]
invenio_records = "invenio_records.tasks.api"

[project.entry-points."invenio_db.alembic"]
invenio_records = "invenio_records:alembic"

[project.entry-points."invenio_db.models"]
invenio_records = "invenio_records.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_records"

[project.optional-dependencies]
admin = [
  "invenio-admin>=1.2.1,<2.0.0",
]
docs = []
mysql = [
  "invenio-db[mysql,versioning]>=2.2.0,<3.0.0",
]
postgresql = [
  "invenio-db[postgresql,versioning]>=2.2.0,<3.0.0",
]
sqlite = [
  "invenio-db[versioning]>=2.2.0,<3.0.0",
]
tests = [
  "invenio-admin>=1.4.0,<2.0.0",
  "invenio-app>=3.0.0,<4.0.0",
  "pytest-black-ng>=0.4.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "pytest-mock>=1.6.0",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_records/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_records/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_records/translations/messages.pot"
output_dir = "invenio_records/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_records/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_records",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records --cov-report=term-missing'
testpaths = "tests invenio_records"
live_server_scope = "module"
